Fix conversion logic, add localStorage caching for instant load, and update placeholders

--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
                         <div class="badge">USD</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">$</span><span class="price-value" id="xau-price">——</span>
+                        <span class="price-currency">$</span><span class="price-value" id="xau-price">Loading...</span>
                     </div>
                     <div class="card-change" id="xau-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="xau-change">——</span>
-                        <span id="xau-pct" class="pct">(——)</span>
+                        <span id="xau-change">Loading...</span>
+                        <span id="xau-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                     <!-- INR / gram derived -->
                     <div class="inr-gram-row">
                         <span class="inr-gram-label">Per gram (INR)</span>
-                        <span class="inr-gram-value" id="xau-inr-gram">——</span>
+                        <span class="inr-gram-value" id="xau-inr-gram">Loading...</span>
                     </div>
                 </div>
 
@@ -104,17 +104,17 @@
                         <div class="badge">USD</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">$</span><span class="price-value" id="xag-price">——</span>
+                        <span class="price-currency">$</span><span class="price-value" id="xag-price">Loading...</span>
                     </div>
                     <div class="card-change" id="xag-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="xag-change">——</span>
-                        <span id="xag-pct" class="pct">(——)</span>
+                        <span id="xag-change">Loading...</span>
+                        <span id="xag-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                     <div class="inr-gram-row">
                         <span class="inr-gram-label">Per gram (INR)</span>
-                        <span class="inr-gram-value" id="xag-inr-gram">——</span>
+                        <span class="inr-gram-value" id="xag-inr-gram">Loading...</span>
                     </div>
                 </div>
 
@@ -128,12 +128,13 @@
                         </div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">₹</span><span class="price-value" id="usdinr-price">——</span>
+                        <span class="price-currency">₹</span><span class="price-value"
+                            id="usdinr-price">Loading...</span>
                     </div>
                     <div class="card-change" id="usdinr-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="usdinr-change">——</span>
-                        <span id="usdinr-pct" class="pct">(——)</span>
+                        <span id="usdinr-change">Loading...</span>
+                        <span id="usdinr-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                 </div>
@@ -157,12 +158,13 @@
                         <div class="badge">ETF</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">₹</span><span class="price-value" id="goldbees-price">——</span>
+                        <span class="price-currency">₹</span><span class="price-value"
+                            id="goldbees-price">Loading...</span>
                     </div>
                     <div class="card-change" id="goldbees-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="goldbees-change">——</span>
-                        <span id="goldbees-pct" class="pct">(——)</span>
+                        <span id="goldbees-change">Loading...</span>
+                        <span id="goldbees-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                 </div>
@@ -178,12 +180,13 @@
                         <div class="badge">ETF</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">₹</span><span class="price-value" id="silverbees-price">——</span>
+                        <span class="price-currency">₹</span><span class="price-value"
+                            id="silverbees-price">Loading...</span>
                     </div>
                     <div class="card-change" id="silverbees-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="silverbees-change">——</span>
-                        <span id="silverbees-pct" class="pct">(——)</span>
+                        <span id="silverbees-change">Loading...</span>
+                        <span id="silverbees-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                 </div>
@@ -207,18 +210,19 @@
                         <div class="badge">India</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">₹</span><span class="price-value" id="ingold-price">——</span>
+                        <span class="price-currency">₹</span><span class="price-value"
+                            id="ingold-price">Loading...</span>
                         <span class="price-unit">/g</span>
                     </div>
                     <div class="card-change" id="ingold-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="ingold-change">——</span>
-                        <span id="ingold-pct" class="pct">(——)</span>
+                        <span id="ingold-change">Loading...</span>
+                        <span id="ingold-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                     <div class="inr-gram-row">
                         <span class="inr-gram-label">vs International</span>
-                        <span class="inr-gram-value premium" id="gold-premium">——</span>
+                        <span class="inr-gram-value premium" id="gold-premium">Loading...</span>
                     </div>
                 </div>
 
@@ -233,18 +237,19 @@
                         <div class="badge">India</div>
                     </div>
                     <div class="card-price">
-                        <span class="price-currency">₹</span><span class="price-value" id="insilver-price">——</span>
+                        <span class="price-currency">₹</span><span class="price-value"
+                            id="insilver-price">Loading...</span>
                         <span class="price-unit">/g</span>
                     </div>
                     <div class="card-change" id="insilver-change-row">
                         <i class="fa-solid fa-caret-up caret"></i>
-                        <span id="insilver-change">——</span>
-                        <span id="insilver-pct" class="pct">(——)</span>
+                        <span id="insilver-change">Loading...</span>
+                        <span id="insilver-pct" class="pct">(Loading...)</span>
                         <span class="tag-1d">1D</span>
                     </div>
                     <div class="inr-gram-row">
                         <span class="inr-gram-label">vs International</span>
-                        <span class="inr-gram-value premium" id="silver-premium">——</span>
+                        <span class="inr-gram-value premium" id="silver-premium">Loading...</span>
                     </div>
                 </div>
 
@@ -264,21 +269,21 @@
                     </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
-                        <span class="price-value large" id="expected-goldbees">——</span>
+                        <span class="price-value large" id="expected-goldbees">Loading...</span>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
                             <span>Gold USD at 15:30 IST</span>
-                            <span id="gold-anchor">$——</span>
+                            <span id="gold-anchor">$Loading...</span>
                         </div>
                         <div class="gap-row">
                             <span>Gold USD now</span>
-                            <span id="gold-now">$——</span>
+                            <span id="gold-now">$Loading...</span>
                         </div>
                         <div class="gap-divider"></div>
                         <div class="gap-row gap-total">
                             <span>Move since close</span>
-                            <span class="gap-pct" id="gold-gap-pct">——</span>
+                            <span class="gap-pct" id="gold-gap-pct">Loading...</span>
                         </div>
                     </div>
                 </div>
@@ -291,12 +296,12 @@
                     </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
-                        <span class="price-value large" id="expected-silverbees">——</span>
+                        <span class="price-value large" id="expected-silverbees">Loading...</span>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
                             <span>Silver USD at 15:30 IST</span>
-                            <span id="silver-anchor">$——</span>
+                            <span id="silver-anchor">$Loading...</span>
                         </div>
                         <div class="gap-row">
                             <span>Silver USD now</span>
