Refine gap prediction: show 'Markets are open' during trading hours and remove dashes

--- a/index.html
+++ b/index.html
@@ -201,55 +201,57 @@
             <div class="cards-grid">
 
                 <!-- Gold BeES Expected Open -->
-                <div class="card card-prediction">
+                <div class="card card-prediction" id="gold-gap-card">
                     <div class="prediction-header">
                         <i class="fa-solid fa-bolt text-gold"></i>
                         <span>Expected Gold BeES Open</span>
                     </div>
+                    <div class="market-open-msg">Markets are open</div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
-                        <span class="price-value large" id="expected-goldbees">Loading...</span>
+                        <span class="price-value large" id="expected-goldbees"></span>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
                             <span>Gold USD at 15:30 IST</span>
-                            <span id="gold-anchor">$Loading...</span>
+                            <span id="gold-anchor"></span>
                         </div>
                         <div class="gap-row">
                             <span>Gold USD now</span>
-                            <span id="gold-now">$Loading...</span>
+                            <span id="gold-now"></span>
                         </div>
                         <div class="gap-divider"></div>
                         <div class="gap-row gap-total">
                             <span>Move since close</span>
-                            <span class="gap-pct" id="gold-gap-pct">Loading...</span>
+                            <span class="gap-pct" id="gold-gap-pct"></span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Silver BeES Expected Open -->
-                <div class="card card-prediction">
+                <div class="card card-prediction" id="silver-gap-card">
                     <div class="prediction-header">
                         <i class="fa-solid fa-bolt text-silver"></i>
                         <span>Expected Silver BeES Open</span>
                     </div>
+                    <div class="market-open-msg">Markets are open</div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
-                        <span class="price-value large" id="expected-silverbees">Loading...</span>
+                        <span class="price-value large" id="expected-silverbees"></span>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
                             <span>Silver USD at 15:30 IST</span>
-                            <span id="silver-anchor">$Loading...</span>
+                            <span id="silver-anchor"></span>
                         </div>
                         <div class="gap-row">
                             <span>Silver USD now</span>
-                            <span id="silver-now">$——</span>
+                            <span id="silver-now"></span>
                         </div>
                         <div class="gap-divider"></div>
                         <div class="gap-row gap-total">
                             <span>Move since close</span>
-                            <span class="gap-pct" id="silver-gap-pct">——</span>
+                            <span class="gap-pct" id="silver-gap-pct"></span>
                         </div>
                     </div>
                 </div>
