fix: fast load (parallel fetches), correct down-arrow on negative, market-open message for prediction cards

--- a/index.html
+++ b/index.html
@@ -258,7 +258,11 @@
                         <i class="fa-solid fa-bolt text-gold"></i>
                         <span>Expected Gold BeES Open</span>
                     </div>
-                    <div class="market-open-msg">Markets are open</div>
+                    <div class="market-open-msg">
+                        <i class="fa-solid fa-circle-check" style="font-size:2rem;color:var(--up)"></i>
+                        <span>🟢 Market is Open</span>
+                        <span style="font-size:0.82rem;font-weight:500;opacity:0.75">Prediction will be available after 3:30 PM IST</span>
+                    </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
                         <span class="price-value large" id="expected-goldbees"></span>
@@ -286,7 +290,11 @@
                         <i class="fa-solid fa-bolt text-silver"></i>
                         <span>Expected Silver BeES Open</span>
                     </div>
-                    <div class="market-open-msg">Markets are open</div>
+                    <div class="market-open-msg">
+                        <i class="fa-solid fa-circle-check" style="font-size:2rem;color:var(--up)"></i>
+                        <span>🟢 Market is Open</span>
+                        <span style="font-size:0.82rem;font-weight:500;opacity:0.75">Prediction will be available after 3:30 PM IST</span>
+                    </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
                         <span class="price-value large" id="expected-silverbees"></span>
